--- a/styling/src/index.css
+++ b/styling/src/index.css
@@ -1,12 +1,41 @@
+*{
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
+}
+
+html{
+  font-size:22px;
+}
+
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family:'Roboto', 'Oxygen','Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.App{
+  display:flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  height:100vh;
+  width:100%;
+  margin:auto;}
 
+  header{
+    width:100%;
+    padding:0.025rem;
+    background-color:mediumblue;
+    color:aliceblue;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
