--- a/useStateHook/src/index.css
+++ b/useStateHook/src/index.css
@@ -25,9 +25,7 @@ body {
   align-items: center;
   height:100vh;
   width:100%;
-  margin:auto;
-max-width:500px;
-border:1px solid mediumblue}
+  margin:auto;}
 
   header{
     width:100%;
