--- a/useStateHook/src/index.css
+++ b/useStateHook/src/index.css
@@ -25,7 +25,8 @@ body {
   align-items: center;
   height:100vh;
   width:100%;
-  margin:auto;}
+  margin:auto;
+max-width: 500px;}
 
   header{
     width:100%;
