--- a/useStateHook/src/index.css
+++ b/useStateHook/src/index.css
@@ -26,7 +26,8 @@ body {
   height:100vh;
   width:100%;
   margin:auto;
-max-width: 500px;}
+max-width: 500px;
+border:solid 1px black}
 
   header{
     width:100%;
