--- a/propsAndPropDrilling/src/index.css
+++ b/propsAndPropDrilling/src/index.css
@@ -115,4 +115,12 @@ button:hover{
   left:-99999px;
 }
 
-.searchForm 
+.searchForm input[type='text']{
+  flex-grow: 1;
+  max-width: 100%;
+  min-height: 48px;
+  font-size:1rem;
+  padding:0.25rem;
+  border-radius: 0.25rem;
+  outline:none;
+}
