--- a/statechallenge/src/index.css
+++ b/statechallenge/src/index.css
@@ -30,3 +30,14 @@ button.selected {
   color: #fff;
   
 }
+
+.table-container{
+  width:100%;
+  overflow-y: auto;
+  padding-top: 52px;
+}
+
+td{
+  border:1px solid black;
+  padding:0.25rem
+}
