--- a/react-router/src/index.css
+++ b/react-router/src/index.css
@@ -125,7 +125,7 @@ body {
   cursor: pointer;
 }
 
-/* .Home, .NewPost, .PostPage, .About, .Missing {
+ .Home, .NewPost, .PostPage, .About, .Missing {
   width: 100%;
   flex-grow: 1;
   padding: 1rem;
@@ -219,7 +219,7 @@ body {
 .statusMsg {
   margin-top: 2rem;
 }
- */
+ 
 
  /* will take reaction from 611 upward  */
 @media only screen and (min-width: 610px) {
