--- a/react-router/src/index.css
+++ b/react-router/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 * {
   margin: 0;
@@ -190,15 +190,7 @@ body {
   height: 100px;
 }
 
-.newPostForm button {
-  margin-top: 1rem;
-  height: 48px;
-  min-width: 48px;
-  border-radius: 10px;
-  padding: 0.5rem;
-  font-size: 1rem;
-  cursor: pointer;
-}
+ 
 
 .Missing h2, .PostPage h2, 
 .Missing p, .PostPage p {
@@ -270,4 +262,6 @@ body {
     font-size: 3rem;
   }
 
-}
+} */
+
+
