--- a/react-router/src/index.css
+++ b/react-router/src/index.css
@@ -35,7 +35,7 @@ body {
   justify-content: flex-start;
   align-items: center;
   border: 1px solid #333;
-  box-shadow: 0px 0px 15px gray;
+  box-shadow: 0px 0px 7px rgb(91, 221, 241);
 }
 
 .Header, .Footer {
@@ -63,7 +63,7 @@ body {
 
 .nav {
   width: 100%;
-  background-color: #333;
+  background-color: #232424;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
